[gd_scene load_steps=31 format=3 uid="uid://cj7mb0cagsptn"]

[ext_resource type="Script" path="res://scenes/orbs/jump_point.gd" id="1_lotvx"]
[ext_resource type="Texture2D" uid="uid://0knh5ix4tpv5" path="res://assets/vfx/orb/jump_orb.png" id="2_u3c28"]
[ext_resource type="Texture2D" uid="uid://cxnwk5a1a5lbs" path="res://assets/vfx/orb/jump_orb_used.png" id="3_2k1vf"]
[ext_resource type="Texture2D" uid="uid://dduwqc4gxl3sx" path="res://assets/vfx/orb/jump_orb_charged_spritesheet_opacity.png" id="3_uvlbq"]
[ext_resource type="AudioStream" uid="uid://dqnf5i1wf7613" path="res://assets/sfx/orb/collecting_jump_point_sfx.mp3" id="4_gd53a"]

[sub_resource type="AtlasTexture" id="AtlasTexture_yvpwu"]
atlas = ExtResource("2_u3c28")
region = Rect2(0, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_asigu"]
atlas = ExtResource("2_u3c28")
region = Rect2(256, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_3a85f"]
atlas = ExtResource("2_u3c28")
region = Rect2(512, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_8u3k1"]
atlas = ExtResource("2_u3c28")
region = Rect2(768, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_3p2tn"]
atlas = ExtResource("2_u3c28")
region = Rect2(1024, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_ym77g"]
atlas = ExtResource("2_u3c28")
region = Rect2(1280, 0, 256, 256)

[sub_resource type="SpriteFrames" id="SpriteFrames_6bvi0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yvpwu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_asigu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3a85f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8u3k1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3p2tn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ym77g")
}],
"loop": true,
"name": &"default",
"speed": 12.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_1jh2p"]
atlas = ExtResource("3_2k1vf")
region = Rect2(0, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_w3rdb"]
atlas = ExtResource("3_2k1vf")
region = Rect2(256, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_80xwo"]
atlas = ExtResource("3_2k1vf")
region = Rect2(512, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_hgl3w"]
atlas = ExtResource("3_2k1vf")
region = Rect2(768, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_g4unv"]
atlas = ExtResource("3_2k1vf")
region = Rect2(1024, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_nabjs"]
atlas = ExtResource("3_2k1vf")
region = Rect2(1280, 0, 256, 256)

[sub_resource type="SpriteFrames" id="SpriteFrames_0y6oy"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1jh2p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w3rdb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_80xwo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hgl3w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g4unv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nabjs")
}],
"loop": false,
"name": &"default",
"speed": 12.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_pmww2"]
atlas = ExtResource("3_uvlbq")
region = Rect2(0, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_m7464"]
atlas = ExtResource("3_uvlbq")
region = Rect2(256, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_ccxsp"]
atlas = ExtResource("3_uvlbq")
region = Rect2(512, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_xjwl5"]
atlas = ExtResource("3_uvlbq")
region = Rect2(768, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_s3vkp"]
atlas = ExtResource("3_uvlbq")
region = Rect2(1024, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_devl5"]
atlas = ExtResource("3_uvlbq")
region = Rect2(1280, 0, 256, 256)

[sub_resource type="SpriteFrames" id="SpriteFrames_j5s8v"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pmww2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m7464")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ccxsp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xjwl5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s3vkp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_devl5")
}],
"loop": false,
"name": &"default",
"speed": 12.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_2ttjw"]
radius = 125.0

[sub_resource type="Animation" id="Animation_v2avf"]
resource_name = "use"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../UseAnimation:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../UseAnimation:animation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"default"]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../UseAnimation:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../SpriteDeactivated:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.6),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_t4fwm"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../UseAnimation:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../UseAnimation:animation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"default"]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../UseAnimation:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../SpriteDeactivated:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gax5k"]
_data = {
"RESET": SubResource("Animation_t4fwm"),
"use": SubResource("Animation_v2avf")
}

[node name="JumpPoint" type="Area2D" groups=["jump_point"]]
script = ExtResource("1_lotvx")

[node name="SpriteActivated" type="AnimatedSprite2D" parent="."]
z_index = 2
scale = Vector2(1.3, 1.3)
sprite_frames = SubResource("SpriteFrames_6bvi0")
autoplay = "default"
frame_progress = 0.42533

[node name="SpriteDeactivated" type="AnimatedSprite2D" parent="."]
visible = false
modulate = Color(0.301961, 0.301961, 0.301961, 1)
z_index = 2
scale = Vector2(1.3, 1.3)
sprite_frames = SubResource("SpriteFrames_0y6oy")
autoplay = "default"

[node name="UseAnimation" type="AnimatedSprite2D" parent="."]
visible = false
modulate = Color(0.301961, 0.301961, 0.301961, 1)
z_index = 2
scale = Vector2(1.3, 1.3)
sprite_frames = SubResource("SpriteFrames_j5s8v")
frame = 1

[node name="TriggerShape" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("CircleShape2D_2ttjw")

[node name="RefreshTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="UsePointPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_gd53a")
volume_db = -3.0
bus = &"SoundEffects"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../SpriteActivated")
libraries = {
"": SubResource("AnimationLibrary_gax5k")
}
speed_scale = 1.5

[connection signal="timeout" from="RefreshTimer" to="." method="_on_refresh_timer_timeout"]
